2006-07-27  Thomas Schwinge  <tschwinge@gnu.org>

	* i386/linux/configure: Regenerate.
	* i386/linux/device-drivers.h.in: Likewise.

2006-07-27  Stefan Siegl  <stesie@brokenpipe.de>

	* i386/linux/configure.ac (pcmcia, wireless): New driver classes.
	(i82365, 3c574_cs, 3c589_cs, axnet_cs, fmvj18x_cs, nmclan_cs, pcnet_cs)
	(smc91c92_cs, xirc2ps_cs, orinoco_cs): New drivers.
	* i386/linux/Makefile.in (linux-pcmcia-cs-modules-files)
	(linux-pcmcia-cs-clients-files, linux-pcmcia-cs-wireless-files): New
	variables.  Add `vpath's to the files locations.
	(all-linux-files): Add the three new variables.
	(linux-pcmcia-cs-modules-flags, linux-pcmcia-cs-clients-flags)
	(linux-pcmcia-cs-wireless-flags): New variables.
	(linux-flags): Add code to handle the above files and flags.

	* i386/i386at/i386at_ds_routines.c (emulation_list)
	[LINUX_DEV && CONFIG_INET && CONFIG_PCMCIA]: Add the Linux pcmcia
	emulation structure.
	* linux/dev/glue/net.c: Include <linux/wireless.h>.
	(device_get_status): Rewrite function.
	(device_set_status): New function.
	(linux_net_emulation_ops): Add `device_set_status' at the appropriate
	position.
	* linux/dev/init/main.c (linux_init) [CONFIG_PCMCIA]: Call pcmcia_init.

	* linux/pcmcia-cs/glue/ds.c: New file.
	* linux/pcmcia-cs/glue/pcmcia.c: Likewise.
	* linux/pcmcia-cs/glue/pcmcia_glue.h: Likewise.
	* linux/pcmcia-cs/glue/wireless_glue.h: Likewise.

	* linux/pcmcia-cs/clients/xirc2ps_cs.c (busy_loop): Replace the code by
	a call to __udelay.
	* linux/pcmcia-cs/include/linux/init.h: Adapt to our Linux environment.
	* linux/pcmcia-cs/include/linux/slab.h: Use `#include', not
	`#include_next'.
	* linux/pcmcia-cs/include/pcmcia/mem_op.h: Adapt to our Linux
	environment and fix GCC 4.0 complaints.
	* linux/pcmcia-cs/include/pcmcia/version.h: Always assume that
	CONFIG_PCMCIA is not defined.
	* linux/pcmcia-cs/modules/cs.c (init_pcmcia_cs): Don't make it static.
	* linux/pcmcia-cs/modules/ds.c: Use some magic to avoid duplicate
	definition `io_req_t'.